--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-firebase-admin
-firebase
-Flask
-Flask-Session
-ultralytics
-cv2
-easyocr
-Flask-Bcrypt
-pdfservices-sdk
-python-dotenv
-opencv-python
-torch
-torchvision
-Gunicorn
+firebase-admin==6.5.0
+Flask==3.0.3
+Flask-Session==0.8.0p
+ultralytics==8.2.22
+easyocr==1.7.1
+Flask-Bcrypt==1.0.1
+pdfservices-sdk==4.0.0
+opencv-python==4.9.0.80
+torch==2.3.0
+torchvision==0.18.0
+
